# number2worduz

./: LICENSE  README.md  README.rst  number2word_uz.py  setup.cfg
.github/workflows/: deploy.yml
