[metadata]
name = number2worduzb
version = 1.0.2
author = Boltayev Davronbek
author_email = tarjimatv1@gmail.com
maintainer = Davronbek
maintainer_email = tarjimatv1@gmail.com
description = number2worduz for translate number to uzbek words
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/firdavsDev
license = MIT
keywords = number, words, num2word, number2words, uzbek_numbers,
classifiers = 
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages = find:
